# taa

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  audit0703.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: compliance.spec.ts  domains.spec.ts  fixtures.ts  generate.spec.ts  home.spec.ts  login.spec.ts  navigation.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx  types.ts
frontend/src/components/: GuidedTour.tsx  Layout.tsx
frontend/src/pages/: AnalyticsPage.tsx  AuditPage.tsx  CompliancePage.tsx  CostEstimatorPage.tsx  DomainsPage.tsx  GeneratePage.tsx  HomePage.tsx  LineagePage.tsx  LoginPage.tsx  OrganizationPage.tsx  SchemaUploadPage.tsx  UsersPage.tsx
helm/taa/: .helmignore  Chart.yaml  values.yaml
helm/taa/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
scripts/: setup-gcp.sh
taa/: __init__.py  __main__.py
taa/application/: __init__.py
taa/application/commands/: __init__.py  generate_compliance.py  generate_dag.py  generate_ddl.py  generate_full_pack.py  generate_pipeline.py  generate_terraform.py  (+1 more)
taa/domain/: repositories.py
tests/: conftest.py  test_e2e_golden.py
tests/application/: test_commands.py  test_dtos.py  test_orchestration.py  test_queries.py
tests/domain/: test_entities.py  test_events.py  test_services.py  test_value_objects.py
tests/golden/: analytics_templates.sql  aws_redshift_ddl.sql  azure_synapse_ddl.sql  cdr_event_compliance.json  cdr_event_compliance.md  cost_estimation_aws.txt  cost_estimation_azure.txt  cost_estimation_gcp.txt  fullpack_manifest.txt  schema_import_report.txt  subscriber_ddl.sql  subscriber_terraform.txt
tests/infrastructure/: test_cli.py  test_compliance_report.py  test_container.py  test_cost_estimation.py  test_data_quality.py  test_database.py  test_export.py  test_generators.py  test_llm_mapper.py  test_looker.py  test_mcp_server.py  test_mock_data.py  test_notebook.py  test_output.py  test_repositories.py  test_schema_import.py  test_schema_migration.py  test_tenant.py
tests/presentation/: test_api.py  test_audit.py  test_auth.py  test_middleware.py  test_users.py
(+166 files in other folders)
