[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taa"
version = "0.1.0"
description = "Telco Analytics Accelerator - Code generation tool for telco BSS/OSS configurations"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "anthropic>=0.42",
    "prometheus-client>=0.21",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
taa = "taa.__main__:main"

[tool.setuptools.packages.find]
include = ["taa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["taa/infrastructure/templates/**"]
